# pandubot_wkspc

./: .gitignore  README.md
ros_wkspc/: lo  log  start.sh  test_tmux.sh
ros_wkspc/src/face_recognition/: CMakeLists.txt  package.xml  setup.py
ros_wkspc/src/face_recognition/src/: .face_detection_node.py.swp  faceDetect.py  face_detection_node.py  liveClassification.py
ros_wkspc/src/navigation_layers/: CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_behaviors/: CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_behaviors/include/pandubot_behaviors/: command_mux.hpp  pandubot_behaviors.hpp  pandubot_publishers.hpp  pandubot_subscribers.hpp
ros_wkspc/src/pandubot_behaviors/param/: nav_waypoints.yaml  table_sampling_poses.yaml
ros_wkspc/src/pandubot_behaviors/src/: command_mux.cpp  main.cpp  mux_node.cpp  object_report_behavior_node.cpp  pandubot_behaviors.cpp  pandubot_publishers.cpp  pandubot_subscribers.cpp  waypoint_behavior_node.cpp
ros_wkspc/src/pandubot_behaviors/test/: testMoveBaseMultiplexing.cpp  testPandubotBehaviors.cpp  testPandubotSubscribers.cpp  testWaypoints.yaml  test_TableMonitor.yaml
ros_wkspc/src/pandubot_behaviors/test/mux_test/: april_tag_sender.cpp  mux.cpp  object_sender.cpp  waypt_sender.cpp
ros_wkspc/src/pandubot_bringup/: CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_bringup/launch/: .ping_pong_with_teleop.launch.swp  base_station.launch  behaviors.launch  final_demo.launch  find_object.launch  intermediate_demo.launch  pandubot_april_tag.launch  ping_pong.launch  ping_pong_with_teleop.launch  two_webcams_image_view.launch  usb_cam.launch
ros_wkspc/src/pandubot_depth_vision/: CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_depth_vision/launch/: kinect_bottom.launch  kinect_top.launch
ros_wkspc/src/pandubot_executive/: CMakeLists.html  CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_executive/inc/: navigation_action_client.hpp  speech_synthesiser.hpp
ros_wkspc/src/pandubot_executive/src/: face_action_client.cpp  object_action_client.cpp  speech_synthesiser.cpp  test_executive.cpp  test_object_waypt.cpp
ros_wkspc/src/pandubot_face_detection/: CMakeLists.txt  package.xml  setup.py
ros_wkspc/src/pandubot_face_detection/action/: face_detect.action
ros_wkspc/src/pandubot_face_detection/src/: faceDetect.py  face_action_server.py  face_detection_node.py  testing_client.py
ros_wkspc/src/pandubot_libraries/: CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_libraries/include/pandubot_libraries/: april_tag_detector.hpp  behavior_schema.hpp  face_action_client.hpp  motor_schema.hpp  navigation_action_client.hpp  object_action_client.hpp  object_types.hpp  perceptual_schema.hpp  table_monitor.hpp  utilities.hpp  voice_publisher.hpp  waypoint_manager.hpp
ros_wkspc/src/pandubot_libraries/include/pandubot_libraries/AprilTags/: TagDetection.h
ros_wkspc/src/pandubot_libraries/src/: april_tag_detector.cpp  behavior_schema.cpp  face_action_client.cpp  motor_schema.cpp  navigation_action_client.cpp  object_action_client.cpp  perceptual_schema.cpp  table_monitor.cpp  utilities.cpp  voice_publisher.cpp
ros_wkspc/src/pandubot_libraries/test/: testBehaviorSchema.cpp  testMotorSchema.cpp  testPerceptualSchema.cpp  testWaypoints.yaml  test_TableMonitor.cpp  test_TableMonitor.yaml
ros_wkspc/src/pandubot_msgs/: CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_msgs/msg/: MotorSignalMoveBase.msg  MuxControl.msg  MuxMessage.msg  ReleaserSignal.msg  atomic_plan.msg
ros_wkspc/src/pandubot_object_recognition/: CMakeLists.txt  package.xml  setup.py
ros_wkspc/src/pandubot_object_recognition/action/: object_action.action
ros_wkspc/src/pandubot_object_recognition/scripts/SIFTMatching/: SIFTMatching.py  SIFTMatching.py~  SIFTMatchingWrapper.py  SIFTMatchingWrapper.py~
ros_wkspc/src/pandubot_object_recognition/src/: SIFTMatching.py  object_action_server.py  object_detection_node.py  testing_client.py
ros_wkspc/src/pandubot_object_recognition/src/vbog/: AD.py  AutoWB.py  MultiScaleRecognizer.py  PP.py  ReadMe.txt  SIFTRecognizer.py  TrainedSVMModel.pickle  computeKMeans.py  extractSIFT.py
ros_wkspc/src/pandubot_planner/: CMakeLists.txt  package.xml  test.yaml
ros_wkspc/src/pandubot_planner/inc/: read_yaml.hpp  sentence.hpp
ros_wkspc/src/pandubot_planner/param/: cmd_list.yaml~  get.yaml  speech_cmds.yaml  speech_cmds.yaml~
ros_wkspc/src/pandubot_planner/src/: main_planner.cpp  read_yaml.cpp  sentence.cpp  test_planner.cpp
ros_wkspc/src/pandubot_speech/: CMakeLists.txt  package.xml  readme.txt
ros_wkspc/src/pandubot_speech/config/: 5707.dic  5707.lm  5707.log_pronounce  5707.sent  5707.vocab  nav_commands.txt  pandu_voice_dictionary.txt
ros_wkspc/src/pandubot_speech/launch/: talkback.launch  turtlebot_voice_nav.launch  turtlebot_voice_nav.launch~  voice_nav_commands.launch  voice_nav_commands.launch~
ros_wkspc/src/pandubot_speech/msg/: pandu_voice_message.msg
ros_wkspc/src/pandubot_speech/nodes/: pandubot_voice.py  talkback.py  voice_nav.py
ros_wkspc/src/pandubot_speech/src/: pandubot_voice.py
ros_wkspc/src/pandubot_stereo_vision/: CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_stereo_vision/launch/: stereo_camera_test.launch  stereo_image_processing.launch
ros_wkspc/src/pandubot_types/: CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_types/include/pandubot_types/: TableMonitor.hpp  table_monitor.hpp  yaml_operations.hpp
ros_wkspc/src/pandubot_types/src/: TableMonitor.cpp  table_monitor.cpp
ros_wkspc/src/pandubot_types/test/: test_TableMonitor.cpp  test_TableMonitor.yaml
ros_wkspc/src/pandubot_waypoint_nav/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
ros_wkspc/src/pandubot_waypoint_nav/src/: .test_single_goal.cpp.swo  test_single_goal.cpp
ros_wkspc/src/scene_recognition/: CMakeLists.txt  GISTWrapper.py~  InitAll.py  READMEFIRST!  SceneTest.py  SceneTrain.py  SceneWrapper.py  compute_gist  package.xml
ros_wkspc/src/test_object_detection/: CMakeLists.txt  package.xml
ros_wkspc/src/webcam/: CMakeLists.txt  package.xml
ros_wkspc/src/yujin_ocs/: CMakeLists.txt  package.xml
(+10 files in other folders)
