<?xml version="1.0"?>
<package>
  <name>pandubot_executive</name>
  <version>0.0.0</version>
  <description>The pandubot_executive package</description>
  <maintainer email="bhavya@todo.todo">bhavya</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> pandubot_libraries</build_depend>
  <run_depend> pandubot_libraries</run_depend>

  <export>
  </export>
</package>