<?xml version="1.0"?>
<package>
  <name>pandubot_libraries</name>
  <version>0.0.0</version>
  <description>The pandubot_libraries package</description>
  <maintainer email="todo@todo.todo"> bhavya </maintainer>
  <license> BSG </license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pandubot_object_recognition</build_depend>
  <build_depend>pandubot_face_detection</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>sound_play</build_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>pandubot_object_recognition</run_depend>
  <run_depend>pandubot_face_detection</run_depend>
  <run_depend>move_base</run_depend>

</package>