cmake_minimum_required(VERSION 2.8.3)
project(pandubot_object_recognition)

find_package(catkin REQUIRED)
find_package(catkin REQUIRED COMPONENTS rospy
                                        sensor_msgs
                                        actionlib_msgs)

add_action_files(DIRECTORY action FILES object_action.action)


catkin_python_setup()
generate_messages(DEPENDENCIES actionlib_msgs
                               std_msgs)
catkin_package(CATKIN_DEPENDS actionlib_msgs)
#add_dependencies(scripts/object_detection_node.py ${pandubot_object_recognition_EXPORTED_TARGETS})
#catkin_package()
#include_directories(${catkin_INCLUDE_DIRS})
#add_executable(object_detection_node.py scripts/object_detection_node.py)
#catkin_python_setup()
install(PROGRAMS src/object_detection_node.py
        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})












































































































































































