cmake_minimum_required(VERSION 2.8.3)
project(pandubot_planner)

# set(CMAKE_CXX_FLAGS "-lyaml-cpp") # for yaml-cpp
# find_package(yaml-cpp REQUIRED)
find_package(catkin REQUIRED)
find_package(catkin REQUIRED COMPONENTS roscpp)
include_directories(inc ${catkin_INCLUDE_DIRS})
catkin_package()
# Path to yaml-cpp.so : /usr/lib/x86_64-linux-gnu/libyaml-cpp.so
#FIND_LIBRARY(YAML_LIBRARY yaml-cpp target_link_libraries /usr/lib/x86_64-linux-gnu/libyaml-cpp.so)
set(YAML_LIBRARY /usr/lib/x86_64-linux-gnu/libyaml-cpp.so)
message(YAML_LIBRARY ${YAML_LIBRARY})

## Test planner node:
add_executable(test_planner src/sentence.cpp src/test_planner.cpp src/read_yaml.cpp)
target_link_libraries(test_planner ${catkin_LIBRARIES} ${YAML_LIBRARY}) 

## Main Planner
add_executable(main_planner_node src/sentence.cpp src/main_planner.cpp src/read_yaml.cpp)
target_link_libraries(main_planner_node ${catkin_LIBRARIES} ${YAML_LIBRARY})


 










































































































































































