<?xml version="1.0"?>
<package>
  <name>pandubot_types</name>
  <version>0.0.0</version>
  <description>The pandubot_util package</description>
  <maintainer email="bhavya@todo.todo">bhavya</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> geometry_msgs </build_depend>
  <run_depend> geometry_msgs </run_depend>
  <export>
  </export>
</package>