cmake_minimum_required(VERSION 2.8.3)
project(pandubot_waypoint_nav)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED)

find_package(catkin REQUIRED COMPONENTS roscpp
					actionlib
					move_base_msgs
					geometry_msgs)
include_directories(${catkin_INCLUDE_DIRS})
catkin_package(DEPENDS move_base)
add_executable(pandu_pingPong_node src/test_single_goal.cpp)
target_link_libraries(pandu_pingPong_node ${catkin_LIBRARIES})
install(TARGETS pandu_pingPong_node RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
install(DIRECTORY launch/ 
	DESTINATION ${CATKIN_SHARE_DESTINATION}/launch)




































































































































































